# aptos-canvas

./: .gitignore  README.md
.github/actions/docker-buildx-setup/: action.yaml
.github/actions/gar-auth/: action.yaml
.github/workflows/: ci.yaml  workflow-run-docker-build.yaml
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-bake.hcl  schema.graphql
backend/all-in-one/: Cargo.toml
backend/all-in-one/src/: config.rs  main.rs
backend/api/: Cargo.toml  README.md
backend/api/src/: common.rs  lib.rs
backend/api/src/metadata_api/: mod.rs  schema.rs
backend/api/src/pixel_api/: mod.rs
backend/configs/: example_local.yaml  example_testnet.yaml
backend/deployment/: README.md  hosts  main.yaml  sites.comma
backend/deployment/templates/: nginx.conf
backend/deployment/templates/nginx/: aptos-canvas-processor-mainnet.j2  base.j2
backend/deployment/templates/systemd/: aptos-canvas-processor.service.j2
backend/entities/: Cargo.toml
backend/entities/src/: lib.rs  pixel_attribution.rs
backend/flusher/: Cargo.toml
backend/flusher/src/: gcs.rs  lib.rs  local.rs
backend/metadata-storage/: Cargo.toml
backend/metadata-storage/src/: lib.rs  memory.rs  postgres.rs
backend/migrations/: Cargo.toml
backend/move-types/: Cargo.toml
backend/move-types/src/: objects.rs
backend/pixel-storage/: Cargo.toml
backend/pixel-storage/src/: lib.rs  mmap.rs  utils.rs
backend/processor/: Cargo.toml
backend/processor/src/: lib.rs  processor.rs  run.rs
backend/scripts/: build-images.sh  rust_lint.sh
backend/service/: Cargo.toml
backend/service/src/: config.rs  main.rs
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
frontend/.github/workflows/: deploy_site.yml
frontend/public/: identity-connect.txt  index.html  manifest.json
frontend/src/: App.tsx  GlobalState.tsx  MyRoutes.tsx  constants.tsx  helpers.ts  index.tsx  serviceWorker.ts  utils.ts
frontend/src/api/: helpers.ts  index.ts
frontend/src/api/hooks/: useGetAccountResource.ts  useGetAccountResourceMany.ts  useGetAccountResources.ts  useGetAnsAddress.ts  useGetAnsName.ts  useGetAptToUsd.ts  useGetMemberStatuses.ts  useGetNetworkChainIds.ts  useGetOperatorAddressOfStakingPool.ts  useGetOverallStatus.ts  useGetPixelAttribution.ts  useGetPixels.ts  useGetPixels.tsx  useGetPntBalance.ts  useGetStakeData.ts  useGetTontineMembership.ts
frontend/src/api/indexer/: index.ts
frontend/src/api/transactions/: index.ts
frontend/src/canvas/: codegen.ts
frontend/src/components/: ConfigTable.tsx  ConnectWalletComponent.tsx  CreateTontine.tsx  DisconnectWalletComponent.tsx  Explanation.tsx  HomeActions.tsx  InviteMemberButton.tsx  MemberInfoTable.tsx  MyCanvas.tsx  MySquare.tsx  NetworkMismatchPage.tsx  NetworkSelect.tsx  PrimaryActions.tsx  TontineDisplay.tsx  TontineInfo.tsx  TontineList.tsx  TontineListCard.tsx
frontend/src/components/canvas/: BottomComponentWrapper.tsx  CanvasPopover.tsx  DrawingCanvas.tsx  MyCanvas.tsx  StyledCanvasBox.tsx  SubmitDrawButton.tsx  ZoomButtons.tsx  helpers.ts
frontend/src/components/header/: Header.tsx  wallet.css
frontend/src/components/sideBar/: DrawModeToggleButton.tsx  PaintInfo.tsx  Palette.tsx  SideBar.tsx  SizeSlider.tsx  ViewOnly.tsx
frontend/src/context/: DrawModeContext.tsx
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/CreatePage/: index.tsx
frontend/src/pages/HomePage/: MyCanvasLoader.tsx  index.tsx
frontend/src/pages/ViewPage/: MyCanvasLoader.tsx  index.tsx
frontend/src/processor/: codegen.ts
frontend/src/processor/queries/: getPixelAttribution.graphql
frontend/src/styles/: equation.css
frontend2/: .env.example  .eslintrc.js  .gitignore  README.md  next.config.js  package.json  panda.config.ts  pnpm-lock.yaml  tsconfig.json
frontend2/panda-preset/: animations.ts  colors.ts  index.ts  scales.ts  text.ts
frontend2/patches/: @types__fabric@5.3.4.patch  fabric@5.3.0.patch
frontend2/public/: identity-connect.txt  manifest.json
frontend2/src/app/: layout.tsx
frontend2/src/app/(home)/: CanvasContainer.tsx  page.tsx  (+7 more)
frontend2/src/constants/: abi.ts  canvas.ts  config.ts
frontend2/src/contexts/: canvas.ts  wallet.tsx
frontend2/src/utils/: color.ts  event.ts  eventEmitter.ts  isServer.ts  tempCanvas.ts  wallet.ts
move/: .gitignore  Move.toml  NOTES.md  README.md  schema.graphql
move/sh_scripts/: move_publish.sh  move_tests.sh
move/sources/: collection.move  token.move  tontine.move
move/sources/canvas/: collection.move  token.move
move/sources/paint/: fungible_asset.move  fungible_token.move
other/drawer/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
other/drawer/src/: main.ts
processor/: .gitignore  Cargo.toml  README.md  config.yaml
processor/configs/: example_testnet.yaml  local.yaml  testnet_example.yaml
processor/deployment/: README.md  hosts  main.yaml  pyproject.toml  sites.comma  wipe.yaml
processor/deployment/templates/: security.conf
processor/deployment/templates/nginx/: aptos-canvas-processor-mainnet.j2  aptos-canvas-processor-testnet.j2
processor/deployment/templates/processor/: config.yaml.j2
processor/deployment/templates/systemd/: aptos-canvas-processor.service.j2
processor/entities/: Cargo.toml
processor/entities/src/: chain_id.rs  last_processed_version.rs  lib.rs  pixel_attribution.rs  prelude.rs
processor/migrations/src/: m20220101_000001_create_table.rs  main.rs
processor/scripts/: generate_api.sh  rust_lint.sh
processor/service/: Cargo.toml
processor/service/src/: config.rs  main.rs  processor.rs
processor/service/src/api/: mod.rs
processor/service/src/canvas_storage/: mmap.rs  mod.rs  utils.rs
processor/service/src/db_storage/: memory.rs  mod.rs  postgres.rs
processor/src/: config.rs  main.rs  processor.rs
processor/src/api/: mod.rs
processor/src/db_storage/: mod.rs
processor/txn-stream/: Cargo.toml
processor/txn-stream/src/: counters.rs  grpc.rs  lib.rs
renderer/: .gitignore  Cargo.toml  README.md  package.json  wrangler.toml
renderer/src/: lib.rs
scripts/: pyproject.toml
(+36 files in other folders)
