[workspace]
resolver = "2"

members = [
    "txn-stream",
]

[workspace.package]
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
edition = "2021"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
repository = "https://github.com/aptos-labs/aptos-core"
rust-version = "1.70"

[workspace.dependencies]
aptos-indexer-protos = "1.0.9"
anyhow = "1.0.62"
async-stream = "0.3"
async-trait = "0.1.53"
clap = { version = "4.3.5", features = ["derive", "unstable-styles"] }
clap_complete = "4.3.1"
cloud-storage = { version = "0.11.1", features = ["global-client"] }
sea-orm = { version = "0.11.3", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
enum_dispatch = "0.3.8"
env_logger = "0.10.0"
futures = "=0.3.24"
futures-channel = "= 0.3.24"
futures-core = "0.3.25"
futures-util = "0.3.21"
log = "0.4.17"
memmap2 = "0.7.1"
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_bytes = "0.11.6"
serde_json = { version = "1.0.81", features = ["preserve_order", "arbitrary_precision"] } # Note: arbitrary_precision is required to parse u256 in JSON
tokio = { version = "1.21.0", features = ["full"] }
tokio-io-timeout = "1.2.0"
tokio-metrics = "0.1.0"
tokio-retry = "0.3.0"
tokio-stream = "0.1.8"
once_cell = "1.10.0"
tokio-test = "0.4.1"
prometheus = { version = "0.13.0", default-features = false }
tokio-util = { version = "0.7.2", features = ["compat", "codec"] }
toml = "0.7.4"
# It is important that this version of tonic matches the version used by aptos-indexer-protos.
tonic = { version = "0.9.2", features = [
    "tls-roots",
    "transport",
    "prost",
    "gzip",
    "codegen",
] }
url = { version = "2.4.0", features = ["serde"] }
uuid = { version = "1.0.0", features = ["v4", "serde"] }
tracing = "0.1.34"
duration-str = "0.5.1"
thiserror = "1.0.44"
prost = "0.11.9"
prost-types = "0.11.9"
