[package]
name = "aptos-canvas-processor"
description = "todo"
version = "0.1.0"

authors = ["Daniel Porteous <daniel@dport.me>"]
edition = "2021"
homepage = "https://github.com/banool/aptos-canvas"
license = "Apache-2.0"
publish = false
repository = "https://github.com/banool/aptos-canvas"
rust-version = "1.71"

[dependencies]
aptos-move-graphql-scalars = { path = "/Users/dport/a/core/crates/aptos-move-graphql/scalars" }
aptos-processor-framework = { git = "https://github.com/aptos-labs/aptos-indexer-processors", branch = "banool/txn-parsers" }
anyhow = "1.0.62"
async-trait = "0.1.53"
clap = { version = "4.3.5", features = ["derive", "unstable-styles"] }
futures = "0.3.24"
sea-orm = { version = "0.11.3", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
cloud-storage = { version = "0.11.1", features = ["global-client"] }
memmap2 = "0.7.1"
log = "0.4.17"
once_cell = "1.10.0"
regex = "1.5.5"
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
tokio = { version = "1.21.0", features = ["full"] }
tracing = "0.1.34"
duration-str = "0.5.1"
serde_yaml = "0.9.25"
tracing-subscriber = "0.3.17"
dashmap = "5.5.0"
image = { version = "0.24.6", default-features = false, features = ["png"] }
poem = { version = "1.3.57", features = ["anyhow"] }
