[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.72"
image = { version = "0.24.6", default-features = false, features = ["png"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
worker = "0.0.17"

[dev-dependencies]
tokio = { version = "1.29.1", features = ["macros", "rt"] }

[profile.release]
lto = true
strip = true
codegen-units = 1

