[package]
name = "pixel-storage"
description = "todo"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
# Internal
move-types = { workspace = true }

# External
anyhow = { workspace = true }
aptos-move-graphql-scalars = { workspace = true }
async-trait = { workspace = true }
image = { workspace = true }
memmap2 = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
