[package]
name = "processor"
description = "todo"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
# Internal
metadata-storage = { workspace = true }
move-types = { workspace = true }
pixel-storage = { workspace = true }

# External
anyhow = { workspace = true }
aptos-move-graphql-scalars = { workspace = true }
aptos-processor-framework = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
