[tool.poetry]
name = "deployment"
version = "0.1.0"
description = ""
authors = ["Daniel Porteous <daniel@dport.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
paramiko = "*"
ansible = "*"
certifi = "*"
requests = "*"
psycopg2 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
