[package]
name = "entities"
description = "todo"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
sea-orm = { workspace = true }
async-graphql = { workspace = true }
seaography = { workspace = true }
