[package]
name = "service"
description = "todo"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
aptos-move-graphql-scalars = { workspace = true }
aptos-processor-framework = { workspace = true }
async-graphql = { workspace = true }
async-graphql-poem = { workspace = true }
migrations = { workspace = true }
entities = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
sea-orm = { workspace = true }
memmap2 = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
duration-str = { workspace = true }
serde_yaml = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = { workspace = true }
image = { workspace = true }
poem = { workspace = true }
seaography = { workspace = true }
