[package]
name = "service"
description = "todo"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-move-graphql-scalars = { workspace = true }
aptos-processor-framework = { workspace = true }
async-graphql = { workspace = true }
async-graphql-poem = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
duration-str = { workspace = true }
entities = { workspace = true }
futures = { workspace = true }
image = { workspace = true }
log = { workspace = true }
memmap2 = { workspace = true }
migrations = { workspace = true }
once_cell = { workspace = true }
poem = { workspace = true }
regex = { workspace = true }
sea-orm = { workspace = true }
seaography = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
